[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/character/burger/burger_lower.png" type="Texture" id=1]
[ext_resource path="res://scenes/character/burger/Burger.gd" type="Script" id=2]
[ext_resource path="res://scenes/character/burger/burger_upper.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 5.75681

[node name="Burger" type="Area2D"]
collision_layer = 0
collision_mask = 18
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="burger_lower" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -3 )

[node name="burger_upper" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, 5 )
[connection signal="area_entered" from="." to="." method="_on_Bread_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bread_body_entered"]
